# COMP442-Compiler

./: .env  Cargo.toml  README.md  bubblesort.ast.gv  bubblesort.derivation.md  lexnegativegrading.outlexerrors  lexnegativegrading.outlextokens  lexpositivegrading.outlextokens  outlex.src  polynomial.ast.gv  polynomial.derivation.md  polynomial.outlextokens  polynomial.outsymboltables.md  test.ast.gv  test.derivation.md  test.src
assignment1/: ASSIGNMENT1.md  lexpositivegrading.outlextokens
docs/: ASSIGNMENT1.md  Lexer_FA.gv  Lexer_ID_FA.gv  Lexer_Number_FA.gv  Lexer_Symbols_2_FA.gv
docs/Assignment1/: Lexer_ID_FA.gv  Lexer_String_FA.gv  Lexer_Symbols_FA.gv
docs/Assignment2/: ASSIGNMENT2.md  first_follow_generator.py  ll1_grammar.grm
docs/Assignment3/: ASSIGMENT3.md
docs/Assignment4/: ASSIGNMENT4.md
docs/rust_doc/: search-index.js  settings.html  source-files.js
docs/test_source/: test.src
src/: lexer.rs  lib.rs  main.rs  token.rs  token_regex.rs  utils.rs
src/codegen/: allocator.rs  generator.rs  instruction_set.rs  mod.rs  utils.rs
src/lexer/: lexer.rs  mod.rs  token.rs  token_regex.rs  utils.rs
src/parser/: ast.rs  data.rs  grammar.rs  mod.rs  parse.rs  parser.rs  utils.rs
src/semantics/: checking.rs  mod.rs  symbol_table.rs  utils.rs  validation.rs
tests/: codegen_function_generation_integration_tests.rs  parser_classes_integration_test.rs  parser_functions_integration_tests.rs  parser_idnest_should_work.rs  parser_variable_declaration_integration_tests.rs
tests/codegen/: array_indexing.src  assignment.src  assignment_expressions.src  (+4 more)
(+369 files in other folders)
