[package]
name = "comp442_compiler"
version = "0.1.0"
authors = ["WillTarte <William.tarte6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.8.3"
regex = "1.4.3"
lazy_static = "1.4.0"
structopt = "0.3"